problem1/wisecow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  type: NodePort
  selector:
    app: wisecow
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4499
    nodePort: 30007 # Select a port between 30000-32767
